[package]
name = "mdbook-plantuml-renderer"
version = "0.1.0"
authors = ["Paul Freakn Baker <paul.nelson.baker@gmail.com>"]
edition = "2018"
keywords = [
  "mdbook",
  "plantuml",
  "markdown",
  "commonmark",
  "preprocessor",
]

[dependencies]
mdbook = "0.3.7"
# clap = "3.0.0-beta.1"
# reqwest = "0.10.4"
# failure = "0.1.8"
clap = "2.33.0"
serde = "1.0.104"
serde_json = "1.0.45"
serde_derive = "1.0.104"

pulldown-cmark = "0.7.1"
pulldown-cmark-to-cmark = "4.0.0"
markedit = "0.3.0"

log = "0.4.8"
simple-logging = "2.0.2"